adding solution files and excersie files

--- a/app/BUILD
+++ b/app/BUILD
@@ -2,49 +2,20 @@
 cc_binary(
     name = "myapp",
     srcs = ["src/myapp.c"],
-	deps = [
-		":uart",
-		"@stringLib//:string",
-	]
+	# ####### Your code starts here #######
+	
+	# Add here the deps attr and fill it according to the source code
+	
+	# #######  Your code ends here  #######
 )
 
 cc_library(
 	name = "uart",
 	srcs = ["src/uart.c"],
-	hdrs = ["inc/uart.h"],
-	deps = ["//lib:console"],
+	# ####### Your code starts here #######
+	
+	# Add here the hdrs and deps 
+	
+	# #######  Your code ends here  #######
 	includes = ["inc/"],
 )
-
-
-
-
-
-
-#######################################################################################################################
-# ## The below code is commented as platform usage requires additional configuraiton to point to c++ toolchain.
-# ##constraint_setting(name = "job")
-# ##constraint_value(name = "actor" , constraint_setting = "job")
-# ##constraint_value(name = "hero" , constraint_setting = "job")
-# ##
-# ##
-# ##constraint_setting(name = "movie")
-# ##constraint_value(name = "piratesofcarrebian" , constraint_setting = "movie")
-# ##constraint_value(name = "avengers" , constraint_setting = "movie")
-# ##
-# ##
-# ##platform(
-# ##	name = "actor-platform",
-# ##	constraint_values = [ 
-# ##		":actor", 
-# ##		":piratesofcarrebian",
-# ##		],
-# ##)
-# ##
-# ##platform(
-# ##	name = "hero-platform",
-# ##	constraint_values = [ 
-# ##		":hero",
-# ##		":avengers",
-# ##		],
-# ##)
