--- a/lib/BUILD
+++ b/lib/BUILD
@@ -1,7 +1,10 @@
 cc_library(
     name = "console",
-    srcs = ["src/console.c"],
-    hdrs = ["inc/console.h"],
+	# ####### Your code starts here #######
+	
+	# Add here the srcs and hdrs used in this library
+	
+	# #######  Your code ends here  #######
     visibility = ["//app:__pkg__"],
 	includes = ["inc/"],
 )
